sprint challenge fix + stretch

--- a/css/index.css
+++ b/css/index.css
@@ -359,3 +359,11 @@ footer {
     margin-top: 25px;
     margin-bottom: 5px;
 }
+
+.h3-tag {
+    margin-top: 15px;
+}
+
+.h2-tags {
+    margin-top: 20px;
+}
